--- a/press-box.html
+++ b/press-box.html
@@ -36,6 +36,7 @@
     <div class="container-fluid">
 
       <!-- Brand and toggle get grouped for better mobile display -->
+
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -46,13 +47,12 @@
         <a class="navbar-brand" href="index.html"><img id="site-logo" src="img/ss-logo.svg" alt="Sport Scope"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
-
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        
+
         <ul class="nav navbar-nav navbar-right">
           
           <div class="row social">
-            <div class="col-lg-12">
+            <div class="col-md-12">
               <ul>
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
@@ -62,7 +62,7 @@
                 <li><a href="" class="fa fa-shopping-cart"></a></li>
               </ul>
             </div>
-          </div> 
+          </div>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Endzone Cameras <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -116,13 +116,13 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="about.html">Sports</a>
+                <a href="sports.html">Sports</a>
               </li>
               <li>
-                <a href="blog-post.html">Testimonials</a>
+                <a href="testimonials.html">Testimonials</a>
               </li>
               <li>
-                <a href="blog-home-2.html">Comparison</a>
+                <a href="comparison.html">Comparison</a>
               </li>
             </ul>
           </li>
@@ -140,100 +140,91 @@
   </nav>
 
 
-  
+ 
 
+<div class="container-fluid first-row">
 
-<!-- Page Content -->
-<div class="container">
+  <!-- Page Content -->
 
-    <!-- Page Heading/Breadcrumbs -->
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Press Box Tripod
-                <small></small>
-            </h1>
-            <ol class="breadcrumb">
-                <li><a href="index.html">Home</a>
-                </li>
-                <li class="active">Press Box</li>
-            </ol>
-        </div>
+  <!-- Page Heading/Breadcrumbs -->
+  <div class="row">
+    <div class="col-md-12">
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a>
+        </li>
+        <li><a href="products.html">Products</a></li>
+        <li class="active">Press Box Tripod</li>
+      </ol>
     </div>
-    <!-- /.row -->
+  </div>
+</div>
+<!-- /.row -->
 
-    <!-- Portfolio Item Row -->
+<!-- Portfolio Item Row -->
+
+<div class="container-fluid ">
+  <section>
+
     <div class="row">
 
-        <div class="col-md-8">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                </ol>
+      <div class="col-md-6">
+        <iframe src="https://www.youtube.com/embed/lYa0RPXAi4Q" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+      </div>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-responsive" src="./img/25manual/IMG_0258.JPG" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="./img/25manual/IMG_0268.JPG" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="./img/25manual/IMG_0263.JPG" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="./img/25manual/IMG_0260.JPG" alt="">
-                    </div>
-
-                </div>
-
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
+      <div class="col-md-6">
+        <div class="row title">
+          <div class="col-md-9">
+            <h1>Press Box Tripod
+            </h1>
+          </div>
+          <div class="col-md-3">
+            <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
+          </div>
         </div>
-
-        <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-12">
             <p>Upgrade your press box or sideline shot with our newest camera system.  With the addition of a 9" HD viewing monitor and comfortable camera remote to a sturdy and versatile tripod, the Press Box Tripod was designed to ensure your press box film is as good as your end zone film. The 9" monitor allows your film crew to easily frame the shot and the camera remote allows easy zoom in/out and record/stop controls to make sure every play is professionally shot.</p>
             <h4>Camera sold separately.</h4>
             <div class="row">
-                <div class="col-lg-6">
-                    <small><ul>
-                        <li>9" HD Viewing Monitor</li>
+              <div class="col-md-6">
+                <ul>
+                  <li>9" HD Viewing Monitor</li>
                         <li>Camera Control Remote</li>
                         <li>Smooth Camera Pan &amp; Tilt</li> 
                         <li>Extends From  17" to 57"</li>
                         <li>Padded Carry Bag</li>                  
                         <li>Works With Sony Cameras</li>
-                    </ul></small>
-                </div>
-                <div class="col-lg-6">
-                    <h2>$499</h2>
-                    <p>Call to add camera</p>
-                    <button type="button" class="btn btn-primary btn-lg">Order Now</button>
-
-                </div>
-
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <h2>$499</h2>
+                <p>Call to add camera</p>
+              </div>
             </div>
+          </div>
         </div>
 
-        <!-- Included Items -->
+      </div>
+    </div>
+  </section>
+</div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <h3 class="page-header left">Includes</h3>
-            </div>
-            <div class="col-lg-4">
 
-                <div class="panel-group" id="accordion">
+
+<!-- Included Items -->
+<div class="container-fluid photo-bg" style="background-image: url(./img/30sportScope/DSC_0068.JPG)">
+  <section>  
+
+
+    <div class="row">
+      <div class="col-md-12">
+        <h3 class="section-header light-text">Includes</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+      <!-- /.panel-group -->
+        <div class="panel-group" id="accordion">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -307,37 +298,22 @@
                             </div>
                         </div>
                     </div>
-                </div>    
-            </div>    
-        </div>            
-
+        </div>
+      </div>
     </div>
-    <!-- /.row -->
-
-    <!-- Related Projects Row
-    <div class="row">
-
-        <div class="col-lg-12">
-            <h3 class="page-header left">Quick Scope in Action</h3>
-        </div>
-
-        <div class="col-sm-3 col-xs-6 col-lg-4">
-
-            <iframe src="https://www.youtube.com/embed/pQb71G-mB_g" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class="col-sm-3 col-xs-6 col-lg-4">
+  </section>
+</div>
+<!-- /.row -->
 
 
+<!-- Related Projects Row -->
 
-        </div>
 
-    </div>  
-     /.row -->
+<!-- /.row -->
 
-    <hr>
+<hr>
 
-      <!-- Footer -->
+  <!-- Footer -->
   <div class="container">
     <footer>
 
@@ -385,5 +361,5 @@
   </script>
 
 </body>
-</html>  
+</html> 
 
