--- a/sports.html
+++ b/sports.html
@@ -140,159 +140,129 @@
   </nav>
 
 
-  
+ 
 
 
-    <!-- Page Content -->
-    <div class="container">
+<div class="container-fluid first-row dark-container light-text">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Sports</h1>
+    </div>
+    <div class="col-md-6">
+      <p>The Sport Scope Endzone Camera is the best way to get elevated film for sporting events. Our end zone camera system works great for football, soccer, lacrosse, rugby, and many other sports. Take a look below at your sport to see just how great end zone camera video can be for your team.</p>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <section>
 
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Blog Home One
-                    <small>Subheading</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Blog Home One</li>
-                </ol>
-            </div>
-        </div>
-        <!-- /.row -->
+    <div class="row roomy">
+     <div class="row title">
+      <div class="col-md-12 right">
+        <h1>Football
+        </h1>
+      </div>
+    </div>
+    <div class="row">
 
-        <div class="row">
 
-            <!-- Blog Entries Column -->
-            <div class="col-md-8">
+      <div class="col-md-6">
+        <iframe src="https://www.youtube.com/embed/wf6L0TPwu-k" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+      </div>
 
-                <!-- First Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
 
-                <hr>
 
-                <!-- Second Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
+      <div class="col-md-6">
+        <p>Football is an action-packed, fast-paced sport that requires a great understanding between the coaches and their players. With the Sport Scope's 30ft elevated view all coaches and players can watch their game and practice film from a new perspective to understand what there are doing correctly and what they need to improve upon. Most high school and some college football stadiums do not have an aerial vantage point for filming behind the endzone. The end zone view is arguably more valuable than the sideline view, but coupled together the two views show coaches and players every angle the need to stay ahead of their competition.</p>
 
-                <hr>
+        <p>The Sport Scope is also a valuable piece of practice equipment because it is very mobile and can raise anywhere between 6 - 30ft. Many of our customers use their Sport Scope endzone camera everyday of the season; they set it up for an aerial view of their practice, lower it to 12-15ft to observe drills, and then set it up on Friday nights for their games.</p>
+      </div>
+  </div>
+</section>
 
-                <!-- Third Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
 
-                <hr>
+<section>
 
-                <!-- Pager -->
-                <ul class="pager">
-                    <li class="previous">
-                        <a href="#">&larr; Older</a>
-                    </li>
-                    <li class="next">
-                        <a href="#">Newer &rarr;</a>
-                    </li>
-                </ul>
+    <div class="row roomy">
+     <div class="row title">
+      <div class="col-md-12">
+        <h1>Soccer
+        </h1>
+      </div>
+    </div>
+    <div class="row">
 
-            </div>
 
-            <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
+      
 
-                <!-- Blog Search Well -->
-                <div class="well">
-                    <h4>Blog Search</h4>
-                    <div class="input-group">
-                        <input type="text" class="form-control">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-                        </span>
-                    </div>
-                    <!-- /.input-group -->
-                </div>
 
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
+      <div class="col-md-6">
+        <p>Soccer is a very fast-paced, back and forth game, with few stoppages. Fortunately, the Sport Scope endzone camera comes standard with a custom made pan tilt head and joystick remote that were designed specifically for fast paced sports. The pan tilt head allows for easy and smooth operation of the camera. The joystick remote comes with two speed control knobs that allow the operator to calibrate both the panning and tilting speeds depending on which sport they are filming and where the action is.</p>
 
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
+<p>Soccer coaches have been using our end zone camera systems because they recognize the power of having an elevated view of their games and scrimmages. Soccer teams and clubs rarely play in a stadium or in an area with an elevated vantage point. Like football, elevated film gives soccer coaches and players are better perspective of the game. Sport Scope's elevated view is a great coaching tool for soccer coaches especially because they are not used to seeing elevated film and can see the key aspects of the game much better than at eye level and can then share it with their coaching staff and players to improve their team's performance.</p>
 
-            </div>
+<p>With the Sport Scope, you can set up at half field or behind the goal depending on what kind of views you are looking for. Set up on sideline for a more broadcast look and behind the goal for a more overall view of the play, each view has its advantages and the Sport Scope can accommodate both.</p>
+      </div>
+      <div class="col-md-6">
+        <iframe src="https://www.youtube.com/embed/Ko2_-DFSc2w" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+      </div>
 
-        </div>
-        <!-- /.row -->
+  </div>
+</section>
 
-        <hr>
+  <section>
+
+    <div class="row roomy">
+     <div class="row title">
+      <div class="col-md-12 right">
+        <h1>Lacrosse
+        </h1>
+      </div>
+    </div>
+    <div class="row">
+
+
+      <div class="col-md-6">
+        <iframe src="https://www.youtube.com/embed/YhDmjX7BtKs" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+      </div>
+
+
+
+      <div class="col-md-6">
+        <p>Similar to soccer, with its face-paced continual action, lacrosse is a great sport that can definitely take advantage of the aerial view the Sport Scope produces. Lacrosse is another sport that generally doesn't play in an area with natural or constructed aerial views, so an endzone camera view will really benefit the coaching staff and players alike. With a smaller field, using the Sport Scope end zone camera is even easier, requiring little panning or tilting to cover the action. Whether you set up at half field or behind a goal, the Sport Scope will deliver amazing film that will improve your team's performance.
+ </p>
+      </div>
+  </div>
+</section>
+
+
+<section>
+
+    <div class="row roomy">
+     <div class="row title">
+      <div class="col-md-12">
+        <h1>Rugby
+        </h1>
+      </div>
+    </div>
+    <div class="row">     
+
+      <div class="col-md-6">
+        <p>Rugby is another sport that rarely has a way to get elevated film to help coaches analyze game and practice film to help them strategize or teach their players. Like football, rugby coaches and players will benefit from the new aerial perspective of their game. With the Sport Scope you can set up on the touchline or behind the dead ball line depending on what views you are looking for.</p>
+      </div>
+      <div class="col-md-6">
+        <h3>Do you have a video to contribute? Email us at <a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a> to share!</h3>
+      </div>
+
+  </div>
+</section>
+ 
+
+
+<!-- /.row -->
+
+<hr>
+
   <!-- Footer -->
   <div class="container">
     <footer>
@@ -341,5 +311,5 @@
   </script>
 
 </body>
-</html>  
+</html> 
 
