--- a/sport-scope-25.html
+++ b/sport-scope-25.html
@@ -36,6 +36,7 @@
     <div class="container-fluid">
 
       <!-- Brand and toggle get grouped for better mobile display -->
+
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -46,13 +47,12 @@
         <a class="navbar-brand" href="index.html"><img id="site-logo" src="img/ss-logo.svg" alt="Sport Scope"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
-
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        
+
         <ul class="nav navbar-nav navbar-right">
           
           <div class="row social">
-            <div class="col-lg-12">
+            <div class="col-md-12">
               <ul>
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
@@ -62,7 +62,7 @@
                 <li><a href="" class="fa fa-shopping-cart"></a></li>
               </ul>
             </div>
-          </div> 
+          </div>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Endzone Cameras <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -116,13 +116,13 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="about.html">Sports</a>
+                <a href="sports.html">Sports</a>
               </li>
               <li>
-                <a href="blog-post.html">Testimonials</a>
+                <a href="testimonials.html">Testimonials</a>
               </li>
               <li>
-                <a href="blog-home-2.html">Comparison</a>
+                <a href="comparison.html">Comparison</a>
               </li>
             </ul>
           </li>
@@ -162,7 +162,7 @@
 
 <!-- Portfolio Item Row -->
 
-<div class="container-fluid ">
+<div class="container-fluid">
   <section>
 
     <div class="row">
@@ -219,7 +219,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="section-header light">Includes</h3>
+        <h3 class="section-header light-text">Includes</h3>
       </div>
     </div>
     <div class="row">
