--- a/development/comparison.html
+++ b/development/comparison.html
@@ -158,7 +158,7 @@
 						<td>NA</td>
 						<td class="check-yes">Yes</td>
 					</tr>
-					<tr>
+					<tr class="divider">
 						<td>Complete System</td>
 						<td class="check-yes">Yes</td>
 						<td class="no">No</td>
