--- a/development/index.html
+++ b/development/index.html
@@ -1,7 +1,7 @@
 @@include('./header.html') 
 
 <!-- Page Content -->
-<div class="container-fluid first-row photo-bg" style="background-image: url(./img/30sportScope/DSC_0127.JPG)">
+<div class="container-fluid first-row photo-bg-home" style="background-image: url(./img/30sportScope/DSC_0127.JPG)">
 
 
 
@@ -10,7 +10,7 @@
     <div class="col-md-9">
       <h1 class="picture-text">Rise above the competition.</h1>
     </div>
-    <a href="#">
+    <a href="./edge-software.html">
       <div class="col-md-3 edge-ad">
         <img src="./img/edge.svg" alt="Edge Replay">
         <h4>Realtime replay in seconds.</h4>
@@ -34,8 +34,8 @@
               <li>HD Camera and 9" Monitor</li>
               <li>Choice of Tower Color</li>
             </ul>
-            <a href="#" type="button" class="btn btn-sm btn-features">Made in the USA</a>
-            <a href="#" type="button" class="btn btn-sm btn-features">Hudl ready</a>
+            <a href="./products.html" type="button" class="btn btn-sm btn-features">Made in the USA</a>
+            <a href="./products.html" type="button" class="btn btn-sm btn-features">Hudl ready</a>
           </div>
           <div class="col-md-6 center">
             <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
@@ -49,7 +49,6 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6"></div>
 
   <!-- /.row -->
 
@@ -115,7 +114,6 @@
 </div>
 /.row -->
 
-<hr>
 
 <!-- Call to Action Section
 <div class="well">
@@ -130,6 +128,5 @@
 </div>
 -->
 </div>
-<hr>
 @@include('./footer.html') 
 
