--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -17,102 +17,176 @@
 </div>
 
 <div class="row">
+     <div class="col-md-12 edge-title">
+        <h1>Software &amp; App Features</h1>
+    </div>
+
     <div class="col-md-6">
-         <div class="panel-group edge-panel-group" id="accordion">
-          <div class="panel panel-default">
+
+         <div class="panel-group" id="accordion">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Full Control</a>
               </h4>
+                <h5>Slow motion, fast forward and rewind each play</h5>
+
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>The Sport Scope comes standard with a High Definition Sony camcorder and a 32GB memory card. We always make sure that we use the best camcorders that have the most important features our customers are looking for, which is why we only use Sony camcorders. Sony has the most dependable and advanced consumer camcorders available, which allow our customers to get HD quality film, transfer it quickly to their computers, and upload to their favorite editing software.</p> 
+                <p>The EDGE App allows the user to have full control over the video playback. Using the speed control meter at the top of the app, you can play each video clip in slow motion and fast forward, both in play and paused modes for simple control. The custom controls of the EDGE App allow forward and rewind with ergonomically positioned thumb buttons over the video player or the play can be scrubbed back and forth using the progress bar feature. Additionally, the play number is positioned in the top left-hand corner so you can quickly see exactly which play you're viewing.</p> 
               </div>
             </div>
           </div>
           <!-- /.panel -->
-          <div class="panel panel-default">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Visual</a>
               </h4>
+              <h5>Color coded drives by ODK. Draw on video to quickly show players
+needed adjustments</h5>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
-
-                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
+                <p>The EDGE App is designed to be very visual in order to help coaches find the plays they want to review fast. Drives are color coded by ODK and all other features were designed with the same intuitive and visual qualities. Draw over the video to visually show your players needed adjustments. You can draw with three colors: blue, red, yellow and can erase the drawings with the undo button. Drawing on the screen is the simplest way to communicate quickly to your players.</p> 
               </div>
             </div>
           </div>
-          <div class="panel panel-default">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Play Tagging</a>
               </h4>
+              <h5>Tag ODK, down &amp; distance, hash,
+YL, play type, net yards and more</h5>
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
-
-                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
+                <p>Add information to your video clips with the EDGE App in real time and save the data to each play as it gets recorded. Default information, such as, ODK, down, distance, hash, yard line, play type, and net yards is already on the app for you to add to a clip.  You can also create and add custom tags like positions, players, and formations. Tagging information to each play allows coaches to filter out plays they do not want to see and also to examine their opponent's tendencies.</p> 
               </div>
             </div>
           </div>
-          <div class="panel panel-default">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Smart Features</a>
               </h4>
+              <h5>Quickly sort clips by tagged
+information. Save clips to device to show in locker room at half.</h5>
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
-
-                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
+                <p>The EDGE App comes with many built in smart features that save coach's time and allow them to fully use EDGE Instant Replay to find and exploit their opponent's weaknesses.  One of those features is the ability to quickly sort through clips based on the tagged information assigned to each play.  This allows each coach to tailor the EDGE App to their coaching position and style.  Offensive, defensive, and special teams coaches and filter the plays that matter the most to them, which eliminates clutter and gets them viewing the most valuable plays to quickly see what adjustments need to be made.  Coaches can also save certain plays to their iPad and bring them into the locker room to show their players during half time.  This can be done without being connected to the wireless network because the plays are saved to the device.</p> 
               </div>
             </div>
           </div>
-          <div class="panel panel-default">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Time Saver</a>
               </h4>
+              <h5>Upload video clips and tagged
+plays directly into hudl.</h5>
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
-
-                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
+                <p>All the video clips that are recorded during a game are saved to your laptop and can be easily accessed from the EDGE software and put into Hudl Mercury. You can easily tag each play by ODK, down & distance, hash, YL, play type, net yards, and much more. Each play is is color coordinated based on where it's an offensive, defensive, or kicking play so they're easily identifiable. Once your video is on Hudl you can then import any ODK/tagging information that you did in your EDGE App into Hudl as well.  This will save you time uploading video from your camera to your computer and also save you time coding the game's ODK info as well.</p> 
               </div>
             </div>
           </div>
-          <div class="panel panel-default">
+          <div class="panel panel-default edge-panel">
             <div class="panel-heading">
               <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Automation</a>
               </h4>
+              <h5>The EDGE software does everything
+for you. Just use the remote to record/stop each play.</h5>
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
-                <p>Each Sport Scope end zone camera comes standard with an extended battery for the camcorder. This battery lasts 6 hrs, which will allow you to film several games with your end zone camera on one charge.</p>
-
-                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your HD monitor for 5-6 hrs and also comes with a 12v adapter that can be plugged into a power outlet for unlimited use.</p> 
+                <p>The EDGE Instant Replay system comes fully configured and ready to go right when you receive it.  We have made it virtually plug and play with all software and networking configurations already done for you.  Just connect your camera to the capture device, then connect the capture device to your computer, connect the EDGE router and antenna to the computer, connect the iPads to the EDGE wireless network, and start filming.</p> 
               </div>
             </div>
           </div>
     </div>
 </div>
-
     <div class="col-md-6">
         <iframe src="https://www.youtube.com/embed/nI9vglei4Rg" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
     </div>
 
 </div>
 
+<div class="row">  
+    <div class="col-md-12 edge-title">
+        <h1>Hardware</h1>
+    </div>
 
-<div class="row">
+    <div class="col-md-3 col-sm-6">
+        <div class="panel panel-default edge-panel">
+            <div class="panel-heading">
+              <h4 class="panel-title text-center">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Powerful</a>
+              </h4>
+              <h5 class="text-center">View processed clips in 2-5
+seconds. 1,000 ft. wireless range. No internet required.</h5>
+            </div>
+            <div id="collapseSeven" class="panel-collapse collapse">
+              <div class="panel-body">
+                <p>The EDGE Replay system includes all the networking hardware you need to create a private, closed, and powerful Wi-Fi network.  Each iPad will connect to the EDGE Wi-Fi network and will be able to receive each play at distances of up to 1,000 ft. away from the wireless router and antenna.  Also, you will never data packages or the internet to run the EDGE Replay system, it would work in the middle of nowhere. Thus, you do there is no internet connection required, which makes setting up and operating the EDGE effortless for your filming crew.</p> 
+              </div>
+            </div>
+          </div>
+    </div>
+     <div class="col-md-3 col-sm-6">
+        <div class="panel panel-default edge-panel">
+            <div class="panel-heading">
+              <h4 class="panel-title text-center">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Simple</a>
+              </h4>
+              <h5 class="text-center">Easy and quick setup with everything you need included.</h5>
+            </div>
+            <div id="collapseEight" class="panel-collapse collapse">
+              <div class="panel-body">
+                <p>The EDGE Replay system is extremely simple and easy to set up.  Everything you need is included in the package and comes with easy to follow instructions.  All the hardware is already configured and is plug and play ready when you get it.  There are only a few cables to connect, after that you will be ready to start recording your first plays.</p> 
+              </div>
+            </div>
+          </div>
+    </div>
+     <div class="col-md-3 col-sm-6">
+        <div class="panel panel-default edge-panel">
+            <div class="panel-heading">
+              <h4 class="panel-title text-center">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Reliable</a>
+              </h4>
+              <h5 class="text-center">Works every time in small and large stadiums.</h5>
+            </div>
+            <div id="collapseNine" class="panel-collapse collapse">
+              <div class="panel-body">
+                <p>The EDGE Replay system was designed to have as few parts as possible and to use the best equipment availble to create an extremely reliable system.  All hardware components are directly connected to each other, the only wireless component is the Wi-Fi network, which works in both large and small stadiums at distances of up to 1,000 ft.</p> 
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="panel panel-default edge-panel">
+            <div class="panel-heading">
+              <h4 class="panel-title text-center">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Portable</a>
+              </h4>
+              <h5 class="text-center">Everything packs up in a waterproof hard case.</h5>
+            </div>
+            <div id="collapseTen" class="panel-collapse collapse">
+              <div class="panel-body">
+                <p>Every component of the EDGE Replay system packs up into a waterproof Pelican hard case with a custom foam insert to protect every part of the system while you travel.  The hard case is 21" x 17" x 9" and weighs 18 lbs.</p> 
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
+
+
+<div class="row first-row">
     <div class="col-md-2"></div>
     <div class="col-md-3">
         <div class="panel panel-default text-center">
